--- a/in-retrospect.html
+++ b/in-retrospect.html
@@ -72,7 +72,7 @@
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
 <li class="chapter" data-level="" data-path="expect-to-have-lucid-dreams.html"><a href="expect-to-have-lucid-dreams.html"><i class="fa fa-check"></i>Expect To Have Lucid Dreams</a></li>
-<li class="chapter" data-level="0.1" data-path="why-create-a-bookdown-of-experience.html"><a href="why-create-a-bookdown-of-experience.html"><i class="fa fa-check"></i><b>0.1</b> Why Create a bookdown of Experience?</a></li>
+<li class="chapter" data-level="" data-path="why-create-a-bookdown-of-experience.html"><a href="why-create-a-bookdown-of-experience.html"><i class="fa fa-check"></i>Why Create a bookdown of Experience?</a></li>
 <li class="chapter" data-level="" data-path="in-retrospect.html"><a href="in-retrospect.html"><i class="fa fa-check"></i>In Retrospect</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
@@ -117,7 +117,7 @@
 <h2>In Retrospect</h2>
 <p>If I could do it all over again. I would add the following courses, tools and skills on top of the specialization which are as follows:</p>
 <ol style="list-style-type: decimal">
-<li>Get Linux Ubuntu 20.04 LTS Desktop as your main environment <span class="citation">(Canonical Team <a href="#ref-ubuntu" role="doc-biblioref">2020</a>)</span>. I initially started with Microsoft Windows 10. The experience was awful. After the Windows 10 update, it would not let me write on my disk while running RStudio. This added to the frustration and sleepless nights. Linux Ubuntu 20.04 LTS is the most stable environment for <strong>me</strong>.<br />
+<li>Get Linux Ubuntu 20.04 LTS Desktop as your main OS <span class="citation">(Canonical Team <a href="#ref-ubuntu" role="doc-biblioref">2020</a>)</span>. I initially started with Microsoft Windows 10. The experience was awful. After the Windows 10 update, it would not let me write on my disk while running RStudio. This added to the frustration and sleepless nights. Linux Ubuntu 20.04 LTS is the most stable environment for <strong>me</strong>.<br />
 </li>
 <li>Learn the bash through Cousera course The Unix Workbench by Sean Kross which provides a powerful insight of the inner working of linux accompanied with Git/Github for version control <span class="citation">(Kross <a href="#ref-unix" role="doc-biblioref">2020</a>)</span>.</li>
 <li>Learn blogdown or bookdown packages for proper documentation. There were many days that I have to find saved assignment in my hard-drive. These packages will organize your thought process and force you to have a central location. Now, that I have the power of blogdown/bookdown together with github, these provides a central place where I can organize my work and have a version control. These are very valuable tools to learn.<br />
