--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 <div id="overview" class="section level1 unnumbered">
 <h1>Overview</h1>
-<p>My name is Richard. I’m a consultant that uses many forms of technology to analyze data such as Power BI, Tableau, Salesforce, Looker and R. I wanted to share with you my experience in improving my skill sets in data analytics around R language environment. This is a journey of sleepless nights during Covid-19 lockdown and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2020</a>)</span>. I enrolled for the course in March of 2020 and I will summarize a tidy format of my notes during these specialization.</p>
+<p>My name is Richard. I’m a consultant that uses many forms of technology to analyze data such as SQL, Power BI, Tableau, Salesforce, Looker and R. I wanted to share my experience in in data analytics around R language environment. This is a journey of sleepless nights during Covid-19 lockdown and how I was able to learn R programming through Coursera - JHU Data Science Specialization <span class="citation">(Johns Hopkins University <a href="#ref-dss" role="doc-biblioref">2020</a>)</span>. I enrolled for the course in March of 2020 and I will summarize a tidy format of my notes during these specialization.</p>
 <p>The program consists of 10 courses that covers the following:</p>
 <ol style="list-style-type: decimal">
 <li><strong>The Data Scientist’s Toolbox</strong></li>
